Fixed responsivity on mobiles Header- removed padding Added some space between text and images

--- a/styles.css
+++ b/styles.css
@@ -28,19 +28,21 @@ body{
 .container{
     height: 100%;
     width: 100%;
+    max-width: 100vw;
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows: repeat(7, 1fr);
-    gap: 1rem;
+    gap: 2rem;
     transform: scale(0.9); 
     transform-origin: center center;
 }
 
 .box{
     display: grid;
+
     background-color: var(--White);
     width: 22rem;
-    height: 15rem;
+    height: 1fr;
     padding: 2.5rem 2rem;
     font-weight: 400;
     border-radius: 0.3rem;
@@ -110,8 +112,38 @@ body{
         display: flex;
         flex-direction: column;
         width: 100%;
+        height: 100%;
     }
+
     .box{
         width: 100%;
+        height: 100%;
+        padding: 2rem;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .box h2{
+        font-weight: 600;
+        font-size: 1.3rem;
+        margin-bottom: 1rem;
+    }
+
+    .box p{
+        padding-bottom: 2.5rem;;
+    }
+
+    .header{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        padding: 0;
+        margin: 0;
+    }
+    
+    .header > p{
+        font-size: 0.95rem;
+        line-height: 1.5rem;
+        padding: 0;
     }
 }
